--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,12 @@
     <artifactId>angularjs</artifactId>
     <version>1.4.8</version>
 </dependency>
-
+<dependency>
+   <groupId>javax.enterprise</groupId>
+   <artifactId>cdi-api</artifactId>
+   <version>1.2</version>
+   <scope>provided</scope>
+</dependency>
 
 	</dependencies>
 </project>
